--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ config/
 views/northdakota/
 classes/controller/travelco.php
 views/travelco/*
+classes/controller/northdakota.php
+classes/model/northdakota.php
+
